--- a/src/app/templates/menu/menu.component.html
+++ b/src/app/templates/menu/menu.component.html
@@ -6,7 +6,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <!-- <a class="nav-link active" aria-current="page" href="#">Home</a> -->
           <a class="nav-link" routerLink="periods">Periodos</a>
           <a class="nav-link" routerLink="categories">Categorias</a>
           <a class="nav-link" routerLink="subcategories">Subcategorias</a>
